[package]
name = "julia_sets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# FFI wrapper around opengl
gl33 = "0.2.1"
# Pure rust implementation of opengl contexts
glutin = "0.29.1"
# bytemuck = "1.11.0"
# glfw = "0.45.0"
